<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/enterTrackableName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_trackable_name" />

    <EditText
        android:id="@+id/trackableNameEntry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enterTrackableName"
        android:background="@android:drawable/editbox_background"
        android:inputType="text"
        android:textColor="#000" />

    <TextView
        android:id="@+id/enterTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/trackableNameEntry"
        android:text="@string/enter_title" />

    <EditText
        android:id="@+id/titleEntry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enterTitle"
        android:background="@android:drawable/editbox_background"
        android:inputType="text"
        android:textColor="#000" />

    <TextView
        android:id="@+id/enterMeetDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleEntry"
        android:text="@string/enter_meet_date" />

    <EditText
        android:id="@+id/meetDateEntry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enterMeetDate"
        android:background="@android:drawable/editbox_background"
        android:inputType="text"
        android:textColor="#000" />

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/meetDateEntry"
        android:layout_marginLeft="10dip"
        android:text="@string/save_tracking" />

</RelativeLayout>